[gd_scene load_steps=4 format=3 uid="uid://3ptlys0saqnv"]

[ext_resource type="Script" path="res://addons/fart_engine/Event_Manager/TableKeyField_Dropdown_Template.gd" id="1_j6gc8"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="1_j8lfd"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/DropDown_Template.tscn" id="2_gijan"]

[node name="IfStatement" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_j6gc8")

[node name="TopLabel" parent="." instance=ExtResource("1_j8lfd")]
layout_mode = 2

[node name="TableKeyField_Combo" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Table_DropDown" parent="TableKeyField_Combo" instance=ExtResource("2_gijan")]
layout_mode = 2
selection_table_name = "Table Data"
label_text = "Table"
is_label_button = false

[node name="Input" parent="TableKeyField_Combo/Table_DropDown" index="1"]
item_count = 9
selected = 0
popup/item_0/text = "Game Data"
popup/item_0/id = 0
popup/item_1/text = "Items"
popup/item_1/id = 1
popup/item_2/text = "GlobalOptions"
popup/item_2/id = 2
popup/item_3/text = "Global Settings"
popup/item_3/id = 3
popup/item_4/text = "Character Classes"
popup/item_4/id = 4
popup/item_5/text = "Global Variables"
popup/item_5/id = 5
popup/item_6/text = "Testing Table"
popup/item_6/id = 6
popup/item_7/text = "Local Variables"
popup/item_7/id = 7
popup/item_8/text = "Event Dialog Variables"
popup/item_8/id = 8

[node name="39306" type="PopupMenu" parent="TableKeyField_Combo/Table_DropDown/Input" index="1"]

[node name="input_templateBuffer" parent="TableKeyField_Combo/Table_DropDown" index="2"]
visible = false

[node name="Key_DropDown" parent="TableKeyField_Combo" instance=ExtResource("2_gijan")]
layout_mode = 2
selection_table_name = "Global Data"
label_text = "Key"
is_label_button = false

[node name="Input" parent="TableKeyField_Combo/Key_DropDown" index="1"]
item_count = 1
selected = 0
popup/item_0/text = "Profile 1"
popup/item_0/id = 0

[node name="39318" type="PopupMenu" parent="TableKeyField_Combo/Key_DropDown/Input" index="1"]

[node name="input_templateBuffer" parent="TableKeyField_Combo/Key_DropDown" index="2"]
visible = false

[node name="Field_DropDown" parent="TableKeyField_Combo" instance=ExtResource("2_gijan")]
layout_mode = 2
label_text = "Field"
is_label_button = false

[node name="Input" parent="TableKeyField_Combo/Field_DropDown" index="1"]
item_count = 24
selected = 0
popup/item_0/text = "Active Character"
popup/item_0/id = 0
popup/item_1/text = "Current Map"
popup/item_1/id = 1
popup/item_2/text = "Default Controls"
popup/item_2/id = 2
popup/item_3/text = "Default Dialog Box"
popup/item_3/id = 3
popup/item_4/text = "Default GUI"
popup/item_4/id = 4
popup/item_5/text = "Default In-Game Menu"
popup/item_5/id = 5
popup/item_6/text = "Default Load Game Menu"
popup/item_6/id = 6
popup/item_7/text = "Default Menu Controls"
popup/item_7/id = 7
popup/item_8/text = "Default Player Scene"
popup/item_8/id = 8
popup/item_9/text = "Game State"
popup/item_9/id = 9
popup/item_10/text = "Game Title"
popup/item_10/id = 10
popup/item_11/text = "Gravity Force"
popup/item_11/id = 11
popup/item_12/text = "Is Game Active"
popup/item_12/id = 12
popup/item_13/text = "Is Gravity Active"
popup/item_13/id = 13
popup/item_14/text = "Loading Screen"
popup/item_14/id = 14
popup/item_15/text = "NewGame"
popup/item_15/id = 15
popup/item_16/text = "Player POS"
popup/item_16/id = 16
popup/item_17/text = "Player Starting Position"
popup/item_17/id = 17
popup/item_18/text = "Project Root Scene"
popup/item_18/id = 18
popup/item_19/text = "Save ID"
popup/item_19/id = 19
popup/item_20/text = "Starting Character"
popup/item_20/id = 20
popup/item_21/text = "Starting Map"
popup/item_21/id = 21
popup/item_22/text = "Time"
popup/item_22/id = 22
popup/item_23/text = "Title Screen"
popup/item_23/id = 23

[node name="39324" type="PopupMenu" parent="TableKeyField_Combo/Field_DropDown/Input" index="1"]

[node name="input_templateBuffer" parent="TableKeyField_Combo/Field_DropDown" index="2"]
visible = false

[connection signal="input_selection_changed" from="TableKeyField_Combo/Table_DropDown" to="." method="_on_table_drop_down_input_selection_changed"]
[connection signal="input_selection_changed" from="TableKeyField_Combo/Field_DropDown" to="." method="_on_field_drop_down_input_selection_changed"]

[editable path="TopLabel"]
[editable path="TableKeyField_Combo/Table_DropDown"]
[editable path="TableKeyField_Combo/Key_DropDown"]
[editable path="TableKeyField_Combo/Field_DropDown"]
